[package]
name = "async-std-tls"
version = "0.1.0"
authors = ["JustinRlle <justin.rerolle@protonmail.com>"]
repository = "https://github.com/justinrlle/async-std-tls"
edition = "2018"
publish = false

[dependencies]
native-tls = "0.2.3"
async-std = "0.99.4"
futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }

[dev-dependencies]
cfg-if = "0.1"
env_logger = { version = "0.6", default-features = false }

[target.'cfg(all(not(target_os = "macos"), not(windows), not(target_os = "ios")))'.dev-dependencies]
openssl = "0.10"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dev-dependencies]
security-framework = "0.2"

[target.'cfg(windows)'.dev-dependencies]
schannel = "0.1"

[target.'cfg(windows)'.dev-dependencies.winapi]
version = "0.3"
features = [
  "lmcons",
  "basetsd",
  "minwinbase",
  "minwindef",
  "ntdef",
  "sysinfoapi",
  "timezoneapi",
  "wincrypt",
  "winerror",
]
